Fix article content sizing on mobile by setting children to box-sizing: border-box

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,7 @@ body {
 article>*,
 .home>* {
     width: 100%;
+    box-sizing: border-box;
 }
 
 /* Desktop */
@@ -405,10 +406,7 @@ blockquote {
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 0.1em;
-    padding-bottom: 0.1em;
+    padding: 1rem;
     border-left: 0.2em solid var(--clr-primary-a0);
     background-color: var(--clr-surface-a10);
 }
